# projeto-nasa-gcn

./: .env.example  .gitignore  GEMINI.md  README.md  ROADMAP.md  TECHNICAL_DEBT.md  databricks.yml  deploy.sh  pyproject.toml
docs/: GCN_CIRCULARS_RAG.md  GCN_CLASSIC_BINARY_RAG.md  GCN_CLASSIC_TEXT_RAG.md  GCN_CLASSIC_VOEVENT_RAG.md  GCN_NOTICES_RAG.md  GCN_PACKET_TYPES.md  GOLD_LAYER.md  GOLD_LAYER_RAG.md  IGWN_GWALERT_RAG.md  RAG_USE_CASES.md
nasa_gcn/: README.md  pyproject.toml
nasa_gcn/resources/: nasa_gcn.job.yml
nasa_gcn/src/: pipeline.ipynb
nasagcn/: README.md  databricks.yml  pyproject.toml
nasagcn/resources/: nasagcn_etl.pipeline.yml  sample_job.job.yml
nasagcn/src/nasagcn_etl/: README.md
nasagcn/src/nasagcn_etl/transformations/: sample_trips_nasagcn.py  sample_zones_nasagcn.py
resources/: nasa_gcn.job.yml  nasa_gcn.pipeline.yml
sql/: validation_queries.sql
src/: notebook.ipynb  pipeline.ipynb  rag_agent.py  vectorization_job.py
src/nasa_gcn/: binary_parser.py  config.py  dlt_pipeline.py  main.py  schemas.py  utils.py
tests/: conftest.py  main_test.py  test_binary_parser.py
