[project]
name = "nasa_gcn"
version = "0.0.1"
authors = [{ name = "dltreinamentos.data@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",

    # Code completion support for Lakeflow Declarative Pipelines, also install databricks-connect
    "databricks-dlt",

    # databricks-connect can be used to run parts of this project locally.
    # Note that for local development, you should use a version that is not newer
    # than the remote cluster or serverless compute you connect to.
    # See also https://docs.databricks.com/dev-tools/databricks-connect.html.
    "databricks-connect>=15.4,<15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"] # Enable pycodestyle errors(E), Pyflakes(F), isort(I), pycodestyle warnings(W)
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nasa_gcn"]

[project.scripts]
main = "nasa_gcn.main:main"